Deployment 2021-06-11 04:22 PM Admin User/Add Designer Job to Careers Page

--- a/new-test-page/index.html
+++ b/new-test-page/index.html
@@ -23,7 +23,7 @@
     <div id="xcontentwrap"><div id="xcontent">
       <!-- Content -->
 
-      <div class="xcontentpanel"><p>Page ContentAAAAA</p></div>
+      <div class="xcontentpanel"><p>Page ContentAAAAABBB</p></div>
       
       <!-- End of Content -->
       <div style="clear:both;"></div>
