Deployment 2021-06-11 04:33 PM Admin User/Add Designer Job to Careers Page

--- a/about/index.html
+++ b/about/index.html
@@ -90,7 +90,7 @@
 <div class="pnlBios_bio">
 <div class="pnlBios_photo">
 <div class="pnlBios_spacer"></div>
-<img src="/pages/about/profile_amy.jpg" width="400" height="400" /></div>
+<img src="pages/about/profile_amy.jpg" width="400" height="400" /></div>
 <h3 class="pnlBios_name">Amy Johnson</h3>
 <div class="pnlBios_title">Title</div>
 <div class="pnlBios_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, nam eu eros varius.</div>
@@ -98,7 +98,7 @@
 <div class="pnlBios_bio">
 <div class="pnlBios_photo">
 <div class="pnlBios_spacer"></div>
-<img src="/pages/about/profile_steve.jpg" width="400" height="400" /></div>
+<img src="pages/about/profile_steve.jpg" width="400" height="400" /></div>
 <h3 class="pnlBios_name">Steve Baker</h3>
 <div class="pnlBios_title">Title</div>
 <div class="pnlBios_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, nam eu eros varius.</div>
@@ -106,7 +106,7 @@
 <div class="pnlBios_bio">
 <div class="pnlBios_photo">
 <div class="pnlBios_spacer"></div>
-<img src="/pages/about/profile_david.jpg" width="400" height="400" /></div>
+<img src="pages/about/profile_david.jpg" width="400" height="400" /></div>
 <h3 class="pnlBios_name">David Smith</h3>
 <div class="pnlBios_title">Title</div>
 <div class="pnlBios_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, nam eu eros varius.</div>
