--- a/services/improve-forecasts/index.html
+++ b/services/improve-forecasts/index.html
@@ -58,7 +58,7 @@
   <div class="cmptSlideshow jsharmony_cms_component cmptSlideshow-fixed responsive fullWidth " style="">
     
     <div class="cmptSlideshow_slide item0  cmptSlideshow_slide-shadowHeavy" data-slide="0">
-      <a   class="cmptSlideshow_slideLink" style="background-image: url('/pages/services/fishing_dock.jpg');"  data-slide-background="1"><img data-slide-image="1" class="cmptSlideshow_slideImage" src="/pages/services/fishing_dock.jpg" style="height:400px;width:100%;" /></a>
+      <a   class="cmptSlideshow_slideLink" style="background-image: url('pages/services/fishing_dock.jpg');"  data-slide-background="1"><img data-slide-image="1" class="cmptSlideshow_slideImage" src="pages/services/fishing_dock.jpg" style="height:400px;width:100%;" /></a>
         <div class="cmptSlideshow_slideContent full " >
             <h2 class="cmptSlideshow_slideTitle full" ><p style="text-align: center;"><span style="color: #ffffff;">Improve Forecasts</span></p></h2>
             <div class="cmptSlideshow_slideBody full" ><p style="text-align: center;"><span style="color: #ffffff;">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</span></p></div>
@@ -124,7 +124,7 @@
       <!-- Content -->
 
       <div class="xcontentpanel"><p>
-<script type="text/javascript" src="/scripts/animate.min.js"></script>
+<script type="text/javascript" src="scripts/animate.min.js"></script>
 <div style="width:900px;max-width:100%;margin:20px auto;">
 <div style="width:100%;padding-bottom:63%;position:relative;">
 <svg class="app-animation" style="width:100%;position:absolute;" xmlns="http://www.w3.org/2000/svg" viewbox="-50 0 1220.50064 691.70682"> 
