--- a/services/improve-forecasts/index.html
+++ b/services/improve-forecasts/index.html
@@ -107,12 +107,13 @@
 
 <title>App Animation</title>
 
-<link rel="stylesheet" type="text/css" href="/css/style.css" />
-<link rel="stylesheet" type="text/css" href="/css/style.mobile.css" />
-<link rel="stylesheet" type="text/css" href="/fonts/fonts.css" />
-<script language="javascript" type="text/javascript" src="/js/jquery-1.12.4.js"></script>
-<script language="javascript" type="text/javascript" src="/js/aphWebComponents.js"></script>
-<script language="javascript" type="text/javascript" src="/js/site.js"></script>
+<base href="/october/">
+<link rel="stylesheet" type="text/css" href="css/style.css" />
+<link rel="stylesheet" type="text/css" href="css/style.mobile.css" />
+<link rel="stylesheet" type="text/css" href="fonts/fonts.css" />
+<script language="javascript" type="text/javascript" src="js/jquery-1.12.4.js"></script>
+<script language="javascript" type="text/javascript" src="js/aphWebComponents.js"></script>
+<script language="javascript" type="text/javascript" src="js/site.js"></script>
 
 
 
@@ -181,7 +182,7 @@
       <div style="clear:both;"></div>
     </div><div style="clear:both;"></div></div><!-- xcontent_wrap -->
   
-    <div id="xloadingblock"><div><div id="xloadingbox">Loading<br/><img src="/images/loading.gif" alt="Loading" title="Loading" /></div></div></div>
+    <div id="xloadingblock"><div><div id="xloadingbox">Loading<br/><img src="images/loading.gif" alt="Loading" title="Loading" /></div></div></div>
   </div></div><!-- body_wrapper,body_inner -->
 </body>
 </html>
