Deployment 2021-06-11 05:12 PM Admin User/Add Designer Job to Careers Page######################################################

--- a/services/index.html
+++ b/services/index.html
@@ -6,7 +6,7 @@
 
 <title>Services</title>
 
-<base href="/october/">
+<base href="/">
 <link rel="stylesheet" type="text/css" href="css/style.css" />
 <link rel="stylesheet" type="text/css" href="css/style.mobile.css" />
 <link rel="stylesheet" type="text/css" href="fonts/fonts.css" />
