--- a/careers/index.html
+++ b/careers/index.html
@@ -6,7 +6,7 @@
 
 <title>Careers</title>
 
-<base href="/">
+<base href="/october/">
 <link rel="stylesheet" type="text/css" href="css/style.css" />
 <link rel="stylesheet" type="text/css" href="css/style.mobile.css" />
 <link rel="stylesheet" type="text/css" href="fonts/fonts.css" />
