--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <title>Company Site</title>
 
-<base href="/">
+<base href="/october/">
 <link rel="stylesheet" type="text/css" href="css/style.css" />
 <link rel="stylesheet" type="text/css" href="css/style.mobile.css" />
 <link rel="stylesheet" type="text/css" href="fonts/fonts.css" />
@@ -216,7 +216,7 @@
 
 <title>App Animation</title>
 
-<base href="/">
+<base href="/october/">
 <link rel="stylesheet" type="text/css" href="css/style.css" />
 <link rel="stylesheet" type="text/css" href="css/style.mobile.css" />
 <link rel="stylesheet" type="text/css" href="fonts/fonts.css" />
