--- a/services/deliver-results/index.html
+++ b/services/deliver-results/index.html
@@ -6,7 +6,7 @@
 
 <title>Deliver Results</title>
 
-<base href="/">
+<base href="/october/">
 <link rel="stylesheet" type="text/css" href="css/style.css" />
 <link rel="stylesheet" type="text/css" href="css/style.mobile.css" />
 <link rel="stylesheet" type="text/css" href="fonts/fonts.css" />
@@ -107,7 +107,7 @@
 
 <title>App Animation</title>
 
-<base href="/">
+<base href="/october/">
 <link rel="stylesheet" type="text/css" href="css/style.css" />
 <link rel="stylesheet" type="text/css" href="css/style.mobile.css" />
 <link rel="stylesheet" type="text/css" href="fonts/fonts.css" />
