Deployment 2021-06-17 02:56 PM Admin User/Add Designer Job to Careers Page

--- a/elements/app-animation.html
+++ b/elements/app-animation.html
@@ -6,7 +6,7 @@
 
 <title>App Animation</title>
 
-<base href="/">
+<base href="/october/">
 <link rel="stylesheet" type="text/css" href="css/style.css" />
 <link rel="stylesheet" type="text/css" href="css/style.mobile.css" />
 <link rel="stylesheet" type="text/css" href="fonts/fonts.css" />
@@ -25,7 +25,7 @@
       <!-- Content -->
 
       <div class="xcontentpanel"><p>
-<script type="text/javascript" src="/scripts/animate.min.js"></script>
+<script type="text/javascript" src="/october/scripts/animate.min.js"></script>
 <div style="width:900px;max-width:100%;margin:20px auto;">
 <div style="width:100%;padding-bottom:63%;position:relative;">
 <svg class="app-animation" style="width:100%;position:absolute;" xmlns="http://www.w3.org/2000/svg" viewbox="-50 0 1220.50064 691.70682"> 
