Deployment 2021-06-24 05:03 PM Admin User/Add Designer Job to Careers Page

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <div class="cmptSlideshow_slide item0  " data-slide="0">
         <a href="/october/about/"  class="cmptSlideshow_slideLink" style="background-image: url('/october/pages/home/slideshow_rocks.jpg');"  data-slide-background="1"><img data-slide-image="1" class="cmptSlideshow_slideImage" src="/october/pages/home/slideshow_rocks.jpg" style="max-height:350px;width:auto;" /></a>
           <div class="cmptSlideshow_slideContent full " style="pointer-events:none;">
-              <h2 class="cmptSlideshow_slideTitle full" ><p style="text-align: left;"><span style="color: #ecf0f1;">QUALITY &amp; PERFORMANCE</span></p></h2>
+              <h2 class="cmptSlideshow_slideTitle full" ><p style="text-align: left;"><span style="color: #ecf0f1;">QUALITY &amp; PERFORMANCE!</span></p></h2>
               <div class="cmptSlideshow_slideBody full" ><p style="text-align: left;"><span style="color: #ecf0f1;">Discover the Company Difference <span class="material-icons">&#58133;</span></span></p></div>
           </div>
       </div>
